// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewQuery/> picks the correct <View/> by maxWidth 1 1`] = `
<View
  maxWidth={800}
>
  view 4
</View>
`;

exports[`<ViewQuery/> picks the correct <View/> by maxWidth 2 1`] = `
<View
  maxWidth={800}
>
  view 4
</View>
`;

exports[`<ViewQuery/> renders first matching view 1`] = `
<View
  maxWidth={123}
>
  view 1
</View>
`;

exports[`<ViewQuery/> treats empty maxWidth as Infinity 1`] = `
<View>
  view 5
</View>
`;
